# ChangeLog for dev-perl/Config-Simple
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.18 2007/01/15 15:11:31 mcummings Exp $

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.58.ebuild:
  Ebuild maintenance

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  -Config-Simple-4.57.ebuild, Config-Simple-4.58.ebuild:
  Marking amd64 stable; clean up

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.57.ebuild, Config-Simple-4.58.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Config-Simple-4.58.ebuild:
  Mark 4.58 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Config-Simple-4.58.ebuild:
  Mark 4.58 ~ia64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  Config-Simple-4.58.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.58.ebuild:
  Marking stable sparc x86

  17 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org>
  Config-Simple-4.58.ebuild:
  Added to ~amd64.

*Config-Simple-4.58 (24 Apr 2005)

  24 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  +Config-Simple-4.58.ebuild:
  clean and bump

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  Config-Simple-4.57.ebuild:
  Stable on ppc.

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Config-Simple-4.57.ebuild:
  Stable on sparc

  21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Config-Simple-4.57.ebuild:
  Unmasking for x86

*Config-Simple-4.57 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org>
  +Config-Simple-4.57.ebuild:
  New version on cpan; bugs 7793 & 6252 on rt

  02 Sep 2004; <pvdabeel@gentoo.org> Config-Simple-4.55.ebuild,
  Config-Simple-4.56.ebuild:
  PPC stable profile update

*Config-Simple-4.56 (30 Jul 2004)

  30 Jul 2004; Michael Cummings <mcummings@gentoo.org>