@@ -1,4 +1,6 @@
 DIST Config-Simple-4.58.tar.gz 23934 RMD160 214599a097cbba1b58d9f2771186a0c604b556e0 SHA1 2ee759f0bc7529ae7a3949a59edaa0ff09390417 SHA256 dd9995706f0f9384a15ccffe116c3b6e22f42ba2e58d8f24ed03c4a0e386edb4
+DIST Config-Simple-4.59.tar.gz 21010 RMD160 9fbc852d32fbf49d0539135c253162afcebd91f5 SHA1 4777200847a967d098f75ddf069f38e9ce8d38e1 SHA256 cb78a975ad8463f992f35f392227aaf188d533c9092373742b3c2bb592781054
 EBUILD Config-Simple-4.58.ebuild 588 RMD160 ccda08b493a585251fdcba02325931662fa4e6ab SHA1 58ef6f9b720b654ad084273495343572e15f2173 SHA256 a86d82b1b15e31334545992fce82402b38860f9a194d4fc42f2911c0c23de09f
-MISC ChangeLog 2343 RMD160 0ee4d0cc4b498fa215cb8a5792df8ae0e2c8c7f5 SHA1 0abbaaa275d9ba8a2e35f1e0c271fad91ae866d7 SHA256 44b9f7f58dabbbd8c54a5f277d026abc8ea5614658a2173aba6a4bce9bae4c11
+EBUILD Config-Simple-4.59.ebuild 581 RMD160 924e408567c97bbabec475a151e3306b88142de2 SHA1 8bd12c7fbe1bec478745240f37eb1365f5d385c0 SHA256 40de0c205db5acdef5ecaa820975bdc5c83788ece4849ab605a63162dc0f5413
+MISC ChangeLog 2474 RMD160 c6e94820f0b5660a1b679ebe21c374438112035d SHA1 78c7488ccf28a1c1d4c89c1e6e778374a95c9605 SHA256 56de9a233ce3dc77ab76ba0e29401592a72c19a2df7ee67198f0b843111d60ca
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
