@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Config-Simple
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.18 2007/01/15 15:11:31 mcummings Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-Simple/ChangeLog,v 1.19 2008/05/12 16:09:02 ian Exp $
+
+*Config-Simple-4.59 (12 May 2008)
+
+  12 May 2008; Christian Hartmann <ian@gentoo.org>
+  +Config-Simple-4.59.ebuild:
+  Fixed bug #221845
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Config-Simple-4.58.ebuild:
